--- a/src/main.scss
+++ b/src/main.scss
@@ -31,7 +31,7 @@ svg {
 }
 
 /* CELL */
-.cell:hover {
+.county:hover {
   stroke: var(--black);
   stroke-opacity: .5;
   fill: var(--color-hover);
