Add description, move legend to the top

--- a/src/main.scss
+++ b/src/main.scss
@@ -71,6 +71,12 @@ svg.legend {
   text-align: center;
   font-size: 1.8em;
   color: var(--gray-40);
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 1.6em;
+  color: var(--gray-40);
 }
 
 /* TOOLTIP */
